--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: CI
 on: 
   push:
-    master
+    branches: 
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,6 +16,7 @@ jobs:
           aws-region: ap-southeast-2
       - name: Build static site
       - run: npm install && npm run-script build
+      - name: Remove existing files from S3 bucked
+      - run: aws s3 rm s3://andrewrobilliard.com/ --recursive --exclude "andrewrobilliard.com/CNAME" --exclude "andrewrobilliard.com/keybase.txt"
       - name: Deploy static site to S3 bucket
-        run: aws s3 rm s3://andrewrobilliard.com/ --recursive --exclude "andrewrobilliard.com/CNAME" --exclude "andrewrobilliard.com/keybase.txt"
         run: aws s3 cp ./public/ s3://andrewrobilliard.com --recursive
