--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Continuous Deployment
 on: 
   push:
     branches: 
@@ -17,6 +17,6 @@ jobs:
       - name: Build static site
         run: npm install && npm run-script build
       - name: Remove existing files from S3 bucked
-        run: aws s3 rm s3://andrewrobilliard.com/ --recursive --exclude "andrewrobilliard.com/CNAME" --exclude "andrewrobilliard.com/keybase.txt"
+        run: aws s3 rm s3://andrewrobilliard.com/ --recursive --exclude "./CNAME" --exclude "./keybase.txt"
       - name: Deploy static site to S3 bucket
         run: aws s3 cp ./public/ s3://andrewrobilliard.com --recursive
