--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: Continuous Deployment
-on: 
+on:
   push:
-    branches: 
+    branches:
       - master
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -17,6 +17,6 @@ jobs:
       - name: Build static site
         run: npm install && npm run-script build
       - name: Remove existing files from S3 bucked
-        run: aws s3 rm s3://andrewrobilliard.com/ --recursive --exclude "./CNAME" --exclude "./keybase.txt"
+        run: aws s3 rm s3://andrewrobilliard.com/ --recursive --exclude "s3://andrewrobilliard.com/CNAME" --exclude "s3://andrewrobilliard.com/keybase.txt"
       - name: Deploy static site to S3 bucket
         run: aws s3 cp ./public/ s3://andrewrobilliard.com --recursive
